<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_account"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_account"
            android:textAlignment="center"
            android:textSize="16dp"
            android:letterSpacing="0.04"
            android:textColor="@color/gray"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/gray"
            android:layout_marginTop="40dp"
            android:textSize="15dp" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/ic_baseline_visibility_off_24"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:hint="@string/password"
            android:textColor="@color/gray"
            android:textSize="15dp" />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:hint="@string/re_password"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@color/blue"
            android:layout_marginTop="50dp"
            android:textSize="17dp"
            android:text="@string/create"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="550dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="62dp"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="550dp"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="-25dp"
            android:textSize="20dp"
            android:textColor="@color/blue"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>