<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/welcome"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textSize="16dp"
            android:letterSpacing="0.04"
            android:textColor="@color/gray"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="70dp"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/ic_baseline_visibility_off_24"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:hint="@string/password"
            android:textColor="@color/gray"
            android:textSize="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@color/blue"
            android:layout_marginTop="70dp"
            android:text="@string/login"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="550dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="45dp"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="550dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="-25dp"
            android:textSize="20dp"
            android:textColor="@color/blue"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>